--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/hm-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub图床工具</title>
   </head>
